force-app/main/default/objects/Order_Points_Status__c/Order_Points_Status__c.object-meta.xml
<CustomObject>
    <description>Tracks whether a Contact has a qualifying purchase with awarded points within the rolling 365-day window — used by PointsExpiryService to determine CA exception eligibility.</description>
    <label>Order Points Status</label>
    <nameField>
        <displayFormat>OPS-{0000000}</displayFormat>
        <label>Order Points Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Points Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>