force-app/main/default/objects/Order_Points_Status__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Points Statuses</relationshipLabel>
    <relationshipName>Order_Points_Statuses</relationshipName>
    <type>Lookup</type>
</CustomField>