force-app/main/default/objects/Order_Points_Status__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>Order ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>