force-app/main/default/objects/Order_Points_Status__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Awarded</fullName><default>false</default><label>Awarded</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>